@@ -1,2 +1,5 @@
 Makefile
 Makefile.in
+DartTestfile.txt
+cmake.check_depends
+cmake.depends
