@@ -12,3 +12,6 @@ vtkGdcmReaderPython.cxx
 *Release*
 *.exp
 *.lib
+DartTestfile.txt
+cmake.check_depends
+cmake.depends
